header spacing fix

--- a/drupal/sites/all/themes/chunkpart/css/style.css
+++ b/drupal/sites/all/themes/chunkpart/css/style.css
@@ -1316,12 +1316,14 @@ div.takepart-take-action-widget {
 */
 .node-type-openpublish-photo-gallery #gallery-header {
 	display: inline-block; *display: inline; zoom: 1;
+	vertical-align: middle;
 	width: 100%;
 }
 
 .node-type-openpublish-photo-gallery #gallery-header-main {
 	width: 31em;
 	float: left;
+	margin-bottom: 10px;
 }
 
 .node-type-openpublish-photo-gallery #gallery-content .image {
@@ -1476,7 +1478,6 @@ div.takepart-take-action-widget {
 .node-type-openpublish-photo-gallery #gallery-cover-social {
 	float: right;
 	line-height: 24px;
-	margin-bottom: 7px;
 }
 
 .node-type-openpublish-photo-gallery #gallery-cover-social .tp-social {
